--- a/bootstrap/resources/standard/charts.json.jinja
+++ b/bootstrap/resources/standard/charts.json.jinja
@@ -33,6 +33,78 @@
       "params": "{\"datasource\":\"{{ created_datasets['manual_dataset']['id'] }}__table\",\"viz_type\":\"gauge_chart\",\"groupby\":[\"type\"],\"metric\":{\"expressionType\":\"SIMPLE\",\"column\":{\"advanced_data_type\":null,\"certification_details\":null,\"certified_by\":null,\"column_name\":\"name\",\"description\":null,\"expression\":null,\"filterable\":true,\"groupby\":true,\"id\":12,\"is_certified\":false,\"is_dttm\":false,\"python_date_format\":null,\"type\":\"STRING\",\"type_generic\":1,\"verbose_name\":null,\"warning_markdown\":null},\"aggregate\":\"COUNT\",\"sqlExpression\":null,\"datasourceWarning\":false,\"hasCustomLabel\":false,\"label\":\"COUNT(name)\",\"optionName\":\"{{ option_name_prefix }}1\"},\"adhoc_filters\":[],\"row_limit\":1000,\"start_angle\":225,\"end_angle\":-45,\"color_scheme\":\"supersetColors\",\"font_size\":15,\"number_format\":\"SMART_NUMBER\",\"value_formatter\":\"{value}\",\"show_pointer\":true,\"animation\":true,\"show_split_line\":false,\"split_number\":10,\"show_progress\":true,\"overlap\":false,\"round_cap\":true,\"extra_form_data\":{},\"dashboards\":[ {{ created_dashboards['ops']['id'] }} ]}",
       "slice_name": "Machine Gauge",
       "viz_type": "gauge_chart"
+    },
+    {% endif %} 
+    {% if 'block_storage_dataset' in created_datasets and 'ops' in created_dashboards %}
+    {
+      "dashboards": [
+            {{ created_dashboards['ops']['id'] }}
+        ],
+        "datasource_id": {{ created_datasets['block_storage_dataset']['id'] }},
+        "datasource_type": "table",
+        "description": "string",
+        "external_url": "string",
+        "is_managed_externally": true,
+        "owners": [
+            {{ user_id }}
+        ],
+      "params": "{\"datasource\":\"{{ created_datasets['block_storage_dataset']['id'] }}__table\",\"viz_type\":\"echarts_timeseries_bar\",\"x_axis\":\"is_encrypted\",\"time_grain_sqla\":\"P1D\",\"x_axis_sort_asc\":true,\"x_axis_sort_series\":\"name\",\"x_axis_sort_series_ascending\":true,\"metrics\":[{\"expressionType\":\"SIMPLE\",\"column\":{\"advanced_data_type\":null,\"certification_details\":null,\"certified_by\":null,\"column_name\":\"name\",\"description\":null,\"expression\":null,\"filterable\":true,\"groupby\":true,\"id\":13,\"is_certified\":false,\"is_dttm\":false,\"python_date_format\":null,\"type\":\"STRING\",\"type_generic\":1,\"verbose_name\":null,\"warning_markdown\":null},\"aggregate\":\"COUNT\",\"sqlExpression\":null,\"datasourceWarning\":false,\"hasCustomLabel\":false,\"label\":\"COUNT(name)\",\"optionName\":\"{{ option_name_prefix }}2\"}],\"groupby\":[],\"adhoc_filters\":[],\"order_desc\":true,\"row_limit\":1000,\"truncate_metric\":true,\"show_empty_columns\":true,\"comparison_type\":\"values\",\"annotation_layers\":[],\"forecastPeriods\":10,\"forecastInterval\":0.8,\"orientation\":\"vertical\",\"x_axis_title_margin\":15,\"y_axis_title_margin\":15,\"y_axis_title_position\":\"Left\",\"sort_series_type\":\"sum\",\"color_scheme\":\"supersetColors\",\"only_total\":true,\"show_legend\":true,\"legendType\":\"scroll\",\"legendOrientation\":\"top\",\"x_axis_time_format\":\"smart_date\",\"y_axis_format\":\"SMART_NUMBER\",\"y_axis_bounds\":[null,null],\"rich_tooltip\":true,\"tooltipTimeFormat\":\"smart_date\",\"extra_form_data\":{},\"dashboards\":[ {{ created_dashboards['ops']['id'] }} ]}",
+      "slice_name": "Block Storage",
+      "viz_type": "echarts_timeseries_bar"
+    },
+    {% endif %} 
+    {% if 'blob_storage_dataset' in created_datasets and 'ops' in created_dashboards %}
+    {
+      "dashboards": [
+            {{ created_dashboards['ops']['id'] }}
+        ],
+        "datasource_id": {{ created_datasets['blob_storage_dataset']['id'] }},
+        "datasource_type": "table",
+        "description": "string",
+        "external_url": "string",
+        "is_managed_externally": true,
+        "owners": [
+            {{ user_id }}
+        ],
+      "params": "{\"datasource\":\"{{ created_datasets['blob_storage_dataset']['id'] }}__table\",\"viz_type\":\"echarts_timeseries_bar\",\"x_axis\":\"is_encrypted\",\"time_grain_sqla\":\"P1D\",\"x_axis_sort_asc\":true,\"x_axis_sort_series\":\"name\",\"x_axis_sort_series_ascending\":true,\"metrics\":[{\"expressionType\":\"SIMPLE\",\"column\":{\"advanced_data_type\":null,\"certification_details\":null,\"certified_by\":null,\"column_name\":\"name\",\"description\":null,\"expression\":null,\"filterable\":true,\"groupby\":true,\"id\":17,\"is_certified\":false,\"is_dttm\":false,\"python_date_format\":null,\"type\":\"STRING\",\"type_generic\":1,\"verbose_name\":null,\"warning_markdown\":null},\"aggregate\":\"COUNT\",\"sqlExpression\":null,\"datasourceWarning\":false,\"hasCustomLabel\":false,\"label\":\"COUNT(name)\",\"optionName\":\"{{ option_name_prefix }}4\"}],\"groupby\":[],\"adhoc_filters\":[],\"order_desc\":true,\"row_limit\":1000,\"truncate_metric\":true,\"show_empty_columns\":true,\"comparison_type\":\"values\",\"annotation_layers\":[],\"forecastPeriods\":10,\"forecastInterval\":0.8,\"orientation\":\"vertical\",\"x_axis_title_margin\":15,\"y_axis_title_margin\":15,\"y_axis_title_position\":\"Left\",\"sort_series_type\":\"sum\",\"color_scheme\":\"d3Category10\",\"show_value\":false,\"only_total\":true,\"show_legend\":true,\"legendType\":\"scroll\",\"legendOrientation\":\"top\",\"x_axis_time_format\":\"smart_date\",\"y_axis_format\":\"SMART_NUMBER\",\"y_axis_bounds\":[null,null],\"rich_tooltip\":true,\"tooltipTimeFormat\":\"smart_date\",\"extra_form_data\":{},\"dashboards\":[ {{ created_dashboards['ops']['id'] }} ]}",
+      "slice_name": "Blob Storage",
+      "viz_type": "echarts_timeseries_bar"
+    },
+    {% endif %}
+    {% if 'celeb_contribution_dataset' in created_datasets and 'ops' in created_dashboards %}
+    {
+      "dashboards": [
+            {{ created_dashboards['ops']['id'] }}
+        ],
+        "datasource_id": {{ created_datasets['celeb_contribution_dataset']['id'] }},
+        "datasource_type": "table",
+        "description": "string",
+        "external_url": "string",
+        "is_managed_externally": true,
+        "owners": [
+            {{ user_id }}
+        ],
+        "params": "{\"datasource\":\"{{ created_datasets['celeb_contribution_dataset']['id'] }}__table\",\"viz_type\":\"echarts_timeseries_bar\",\"x_axis\":\"is_encrypted\",\"time_grain_sqla\":\"P1D\",\"x_axis_sort_asc\":true,\"x_axis_sort_series\":\"name\",\"x_axis_sort_series_ascending\":true,\"metrics\":[{\"expressionType\":\"SIMPLE\",\"column\":{\"advanced_data_type\":null,\"certification_details\":null,\"certified_by\":null,\"column_name\":\"contributions\",\"description\":null,\"expression\":null,\"filterable\":true,\"groupby\":true,\"id\":17,\"is_certified\":false,\"is_dttm\":false,\"python_date_format\":null,\"type\":\"STRING\",\"type_generic\":1,\"verbose_name\":null,\"warning_markdown\":null},\"aggregate\":\"SUM\",\"sqlExpression\":null,\"datasourceWarning\":false,\"hasCustomLabel\":false,\"label\":\"SUM(contributions)\",\"optionName\":\"{{ option_name_prefix }}4\"}],\"groupby\":[],\"adhoc_filters\":[],\"order_desc\":true,\"row_limit\":1000,\"truncate_metric\":true,\"show_empty_columns\":true,\"comparison_type\":\"values\",\"annotation_layers\":[],\"forecastPeriods\":10,\"forecastInterval\":0.8,\"orientation\":\"vertical\",\"x_axis_title_margin\":15,\"y_axis_title_margin\":15,\"y_axis_title_position\":\"Left\",\"sort_series_type\":\"sum\",\"color_scheme\":\"d3Category10\",\"show_value\":false,\"only_total\":true,\"show_legend\":true,\"legendType\":\"scroll\",\"legendOrientation\":\"top\",\"x_axis_time_format\":\"smart_date\",\"y_axis_format\":\"SMART_NUMBER\",\"y_axis_bounds\":[null,null],\"rich_tooltip\":true,\"tooltipTimeFormat\":\"smart_date\",\"extra_form_data\":{},\"dashboards\":[ {{ created_dashboards['ops']['id'] }} ]}",
+      "slice_name": "Contributors",
+      "viz_type": "echarts_timeseries_bar"
+    },
+    {% endif %}
+    {% if 'subnet_distribution_dataset' in created_datasets and 'ops' in created_dashboards %}
+    {
+      "dashboards": [
+            {{ created_dashboards['ops']['id'] }}
+        ],
+        "datasource_id": {{ created_datasets['subnet_distribution_dataset']['id'] }},
+        "datasource_type": "table",
+        "description": "string",
+        "external_url": "string",
+        "is_managed_externally": true,
+        "owners": [
+            {{ user_id }}
+        ],
+      "params": "{\"datasource\":\"{{ created_datasets['subnet_distribution_dataset']['id'] }}__table\",\"viz_type\":\"world_map\",\"entity\":\"location\",\"country_fieldtype\":\"name\",\"metric\":{\"expressionType\":\"SIMPLE\",\"column\":{\"advanced_data_type\":null,\"certification_details\":null,\"certified_by\":null,\"column_name\":\"name\",\"description\":null,\"expression\":null,\"filterable\":true,\"groupby\":true,\"id\":10,\"is_certified\":false,\"is_dttm\":false,\"python_date_format\":null,\"type\":\"STRING\",\"type_generic\":1,\"verbose_name\":null,\"warning_markdown\":null},\"aggregate\":\"COUNT\",\"sqlExpression\":null,\"datasourceWarning\":false,\"hasCustomLabel\":false,\"label\":\"COUNT(name)\",\"optionName\":\"{{ option_name_prefix }}2\"},\"adhoc_filters\":[],\"row_limit\":1000,\"max_bubble_size\":\"25\",\"color_picker\":{\"r\":0,\"g\":122,\"b\":135,\"a\":1},\"color_by\":\"metric\",\"linear_color_scheme\":\"superset_seq_2\",\"color_scheme\":\"supersetColors\",\"y_axis_format\":\"SMART_NUMBER\",\"extra_form_data\":{},\"dashboards\":[ {{ created_dashboards['ops']['id'] }} ]}",
+      "slice_name": "Subnet Locations",
+      "viz_type": "world_map"
     }
     {% endif %} 
 ]
